--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     </div>
                 </div>
     
-        <div class="person-data person-data-attrs mt-24"><div class="mb-4 person-data-wrap attr-wrap"><div class="small-text mb-4 mr-4 attr-title hide">ФИО: </div><div class="attrValue title-h6 bold text-center">Е****** А****** В***********</div></div><div class="mb-4 person-data-wrap attr-wrap"><div class="small-text mb-4 mr-4 attr-title">Дата рождения: </div><div class="attrValue small-text gray">02.07.1994</div></div><div class="mb-4 person-data-wrap attr-wrap"><div class="small-text mb-4 mr-4 attr-title">Паспорт: </div><div class="attrValue small-text gray">36** ***451</div></div></div>
+        <div class="person-data person-data-attrs mt-24"><div class="mb-4 person-data-wrap attr-wrap"><div class="small-text mb-4 mr-4 attr-title hide">ФИО: </div><div class="attrValue title-h6 bold text-center">Ф****** М****** М*********</div></div><div class="mb-4 person-data-wrap attr-wrap"><div class="small-text mb-4 mr-4 attr-title">Дата рождения: </div><div class="attrValue small-text gray">09.02.1967</div></div><div class="mb-4 person-data-wrap attr-wrap"><div class="small-text mb-4 mr-4 attr-title">Паспорт: </div><div class="attrValue small-text gray">36** ***451</div></div></div>
     
         <div class="mt-24">
           <a href="https://www.gosuslugi.ru/" class="button close">Закрыть</a>
